--- a/frontend/index.html
+++ b/frontend/index.html
@@ -166,7 +166,7 @@
         
         <!-- Miners Table -->
         <div class="table-responsive">
-          <table class="table table-hover">
+          <table class="table table-hover" id="leaderboardTable">
             <thead>
               <tr>
                 <th>Rank</th>
